Minor fixes for spacing

--- a/template-3/assets/styles/style.css
+++ b/template-3/assets/styles/style.css
@@ -1,5 +1,3 @@
-/*31a664 */
-
 *, *:before, *:after {
 	box-sizing: border-box;
 	margin: 0;
@@ -130,11 +128,11 @@ Slide Ins
 }
 
 .slide.slide-up {
-	transform: translateY(200px);
+	transform: translateY(100px);
 }
 
 .slide.slide-down {
-	transform: translateY(-200px);
+	transform: translateY(-100px);
 }
 
 .slide.slide-left {
@@ -257,6 +255,16 @@ Home
 	font-size: 3.6em;
 }
 
+@media only screen and (max-width: 600px) {
+	.welcome h1 {
+		font-size: 2.6em;
+	}
+
+	.welcome h3 {
+		font-size: 1.3em;
+	}
+}
+
 /*
 ================
 About
@@ -318,6 +326,14 @@ About
 	margin: auto;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+@media only screen and (max-width: 992px) {
+	.about-text p {
+		text-align: left;
+	}
 }
 
 .about-text {
@@ -451,7 +467,7 @@ Blog
 
 @media only screen and (max-width: 992px) {
 	.blog {
-		background: url('../images/profile.png') center top no-repeat;
+		background: url('../images/profile.png') center bottom no-repeat;
 	}
 
 	.blogfilter {
@@ -545,7 +561,7 @@ Prices
 
 @media only screen and (max-width: 992px) {
 	.pricing p {
-		height: 12rem;
+		height: 16rem;
 	}
 
 	.pricing a.btn {
@@ -554,6 +570,7 @@ Prices
 }
 
 .pricing .btn {
+	margin-top: 4rem;
 	opacity: 0;
 	transition: all 0.2s linear
 }
@@ -613,6 +630,11 @@ Testimonials
 .citation.slide.slide-right {
 	transform: translateX(200%);
 	transition: transform 0s;
+}
+
+.quotes.slide.slide-left,
+.citation.slide.slide-left {
+	transition: all 0.4s linear;
 }
 
 #testimonials span {
